--- a/src/server/client-dev/dev.ejs
+++ b/src/server/client-dev/dev.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogo Test</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="screen">
@@ -18,6 +19,13 @@
     <div id="menu"></div>
     <div id="debug"></div>
   </div>
-  <script src="<%= filename %>-min.js"></script>
+  <script src="common.js"></script>
+  <script src="engine/Game.js"></script>
+  <script src="engine/Socket.js"></script>
+  <script src="engine/Camera.js"></script>
+  <script src="engine/Map.js"></script>
+  <script src="engine/Keyboard.js"></script>
+  <script src="engine/Player.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
