Adding monsters model and trying implement astart algorithm

--- a/src/server/client-dev/dev.ejs
+++ b/src/server/client-dev/dev.ejs
@@ -19,12 +19,15 @@
     <div id="menu"></div>
     <div id="debug"></div>
   </div>
+  <script src="engine/utils/astar.js"></script>
   <script src="common.js"></script>
   <script src="engine/Game.js"></script>
   <script src="engine/Socket.js"></script>
   <script src="engine/Camera.js"></script>
   <script src="engine/Map.js"></script>
   <script src="engine/Keyboard.js"></script>
+  <script src="engine/Creature.js"></script>
+  <script src="engine/Monster.js"></script>
   <script src="engine/Player.js"></script>
   <script src="script.js"></script>
 </body>
