changing astart algorithm

--- a/src/server/client-dev/dev.ejs
+++ b/src/server/client-dev/dev.ejs
@@ -19,7 +19,7 @@
     <div id="menu"></div>
     <div id="debug"></div>
   </div>
-  <script src="engine/utils/astar.js"></script>
+  <script src="engine/utils/pathfinding-browser.min.js"></script>
   <script src="common.js"></script>
   <script src="engine/Game.js"></script>
   <script src="engine/Socket.js"></script>
